--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -44,11 +44,11 @@ jobs:
         shell: bash
         run: |
           export PATH="/cygdrive/c/cygwin64/bin:$PATH"
-          export CC="/cygdrive/c/cygwin64/bin/gcc"
-          export CXX="/cygdrive/c/cygwin64/bin/g++"
+          export CC=/cygdrive/c/cygwin64/bin/gcc
+          export CXX=/cygdrive/c/cygwin64/bin/g++
           mkdir build
           cd build
-          cmake -G "Unix Makefiles" -DCMAKE_C_COMPILER="$CC" -DCMAKE_CXX_COMPILER="$CXX" ..
+          cmake -G "Unix Makefiles" -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX ..
 
       - name: Build the project
         shell: bash
