--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -18,8 +17,8 @@ jobs:
 
       - name: Install Chocolatey
         run: |
-          Set-ExecutionPolicy Bypass -Scope Process -Force
-          [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
+          Set-ExecutionPolicy Bypass -Scope Process -Force; `
+          [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; `
           iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
 
       - name: Install dependencies
@@ -29,13 +28,7 @@ jobs:
           choco install visualstudio2019buildtools -y
           choco install cygwin -y
           choco install cyg-get -y
-          cyg-get install gcc-g++ make
-
-      - name: Set up Cygwin environment
-        shell: bash
-        run: |
-          export PATH="/cygdrive/c/cygwin64/bin:$PATH"
-          echo "export PATH=\"/cygdrive/c/cygwin64/bin:\$PATH\"" >> $GITHUB_ENV
+          cyg-get gcc-g++ make
 
       - name: Initialize and update git submodules
         run: |
@@ -46,15 +39,32 @@ jobs:
         run: |
           "C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\Common7\Tools\VsDevCmd.bat"
 
+      - name: "Setup Cygwin"
+        uses: cygwin/cygwin-install-action@v2
+        with:
+          check-sig: false
+          platform: x86_64
+          packages: automake make cmake gcc-g++ doxygen graphviz libssl-devel libuuid-devel
+
+      - name: "Setup cmake"
+        run: |
+          cmake --version
+          gcc -v
+          g++ -v
+
       - name: Configure the build with CMake
         shell: bash
         run: |
-          mkdir build
+          export PATH="/cygdrive/c/cygwin64/bin:$PATH"
+          export CC=/cygdrive/c/cygwin64/bin/gcc
+          export CXX=/cygdrive/c/cygwin64/bin/g++
+          mkdir -p build
           cd build
-          cmake -G "Unix Makefiles" -DCMAKE_C_COMPILER=/usr/bin/gcc -DCMAKE_CXX_COMPILER=/usr/bin/g++ ..
+          cmake ./..
 
       - name: Build the project
         shell: bash
         run: |
+          export PATH="/cygdrive/c/cygwin64/bin:$PATH"
           cd build
           make
