--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -60,7 +60,7 @@ jobs:
           export CXX=/cygdrive/c/cygwin64/bin/g++
           mkdir -p build
           cd build
-          cmake ./..
+          cmake -G "Unix Makefiles" -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX ./..
 
       - name: Build the project
         shell: bash
