--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -59,6 +59,7 @@ jobs:
           export CC=/cygdrive/c/cygwin64/bin/gcc
           export CXX=/cygdrive/c/cygwin64/bin/g++
           mkdir -p build
+          echo "Current directory: $(pwd)"
           cd build
           cmake -G "Unix Makefiles" -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX ./..
 
