--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -60,8 +60,7 @@ jobs:
           export CXX=/cygdrive/c/cygwin64/bin/g++
           mkdir -p build
           echo "Current directory: $(pwd)"
-          cd build
-          cmake -G "Unix Makefiles" -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX ./..
+          cmake -G "Unix Makefiles" -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX ./
 
       - name: Build the project
         shell: bash
