--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -60,7 +60,8 @@ jobs:
           export CXX=/cygdrive/c/cygwin64/bin/g++
           mkdir -p build
           echo "Current directory: $(pwd)"
-          cmake -G "Unix Makefiles" -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX ./
+          cd build
+          cmake -G "Unix Makefiles" -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX /cygdrive/d/a/pdfalto/pdfalto
 
       - name: Build the project
         shell: bash
