Build for windows #16

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -54,8 +54,6 @@ jobs:
 
       - name: Configure the build with CMake
         shell: bash
-        env:
-          SRC_DIR: ${{ github.workspace }}
         run: |
           export PATH="/cygdrive/c/cygwin64/bin:$PATH"
           export CC=/cygdrive/c/cygwin64/bin/gcc
@@ -63,6 +61,7 @@ jobs:
           mkdir -p build
           echo "Current directory: $(pwd)"
           cd build
+          SRC_DIR=$(cygpath -u "${GITHUB_WORKSPACE}")
           cmake -G "Unix Makefiles" -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX $SRC_DIR
 
       - name: Build the project
